<resources>
    //General string assets
    <string name="app_name">StroCare</string>
    <string name="beranda">Beranda</string>
    <string name="jadwal">Jadwal</string>
    <string name="Report">Laporan</string>
    <string name="profil">Profil</string>

    //Auth string assets
    <string name="login">Masuk</string>
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="daftar">Belum punya akun? Daftar di sini</string>
    <string name="register">Daftar</string>
    <string name="akun_baru">Buat akun baru</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="buat_akun">Buat akun</string>
    <string name="kembali_ke_login">Masuk</string>
    <string name="jaringan_tidak_ada">Jaringan tidak terdeteksi</string>

    //Profile string assets
    <string name="pilih_kontak">Pilih kontak</string>
    <string name="tambah_kontak_title">Tambah Kontak</string>
    <string name="dialog_title_izin_ditolak">Izin ditolak</string>
    <string name="dialog_title_izin_dibutuhkan">Izin dibutuhkan</string>
    <string name="dialog_message_izin_kontak_ditolak">Izin mengakses kontak telah ditolak. Anda harus memberikan izin secara manual di menu info aplikasi atau pengaturan.</string>
    <string name="dialog_message_izin_kontak_dibutuhkan">Izin untuk mengakses kontak dibutuhkan untuk menggunakan fitur ini. Jika izin tidak diberikan, maka fitur ini tidak dapat digunakan dan anda harus memberikan izin secara manual di menu info aplikasi</string>
    <string name="dialog_message_izin_sms_ditolak">Izin mengakses SMS telah ditolak. Anda harus memberikan izin secara manual di menu info aplikasi atau pengaturan.</string>
    <string name="dialog_message_izin_sms_dibutuhkan">Izin untuk mengakses SMS dibutuhkan untuk menggunakan fitur ini. Jika izin tidak diberikan, maka fitur ini tidak dapat digunakan dan anda harus memberikan izin secara manual di menu info aplikasi</string>
    <string name="permission_dialog_positive_button">Izinkan</string>
    <string name="permission_dialog_negative_button">Tolak</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Anda yakin akan melakukan logout? Semua data akan tetap tersimpan.</string>
    <string name="logout_dialog_positive_button">Ya, Logout</string>
    <string name="logout_dialog_negative_button">Batal</string>
    <string name="dialog_dismiss_button">Tutup</string>
    <string name="request_result_diberikan">Izin akses diberikan</string>
    <string name="request_result_ditolak">Izin akses ditolak</string>
    <string name="hint_nama_kontak">Nama kontak</string>
    <string name="hint_nomor_kontak">Nomor kontak</string>

    //Schedule string assets
    <string name="tambah_jadwal_baru">Buat Jadwal Baru</string>
    <string name="kembali_ke_daftar_jadwal">Kembali Ke Daftar</string>
    <string name="update_jadwal">Update Jadwal</string>
    <string name="label_tambah_jadwal">Tambah Jadwal Obat</string>
    <string name="label_update_jadwal">Ubah Jadwal Obat</string>
    <string name="nama_obat_hint">Nama obat</string>
    <string name="dosis_obat_hint">Dosis obat</string>
    <string name="nama_dokter_hint">Nama dokter</string>
    <string name="waktu_placeholder" translatable="false">00:00</string>
    <string name="pilih_waktu">Pilih waktu</string>
    <string name="judul_notifikasi">StroCare Reminder</string>
    <string name="pesan_notifikasi">Jangan lupa minum obat</string>

    //Report string assets
    <string name="tambah_laporan_baru">Jelaskan Kondisi Baru</string>
    <string name="kembali_ke_daftar_laporan">Kembali Ke Daftar</string>
    <string name="label_tambah_laporan">Jelaskan Kondisi Anda</string>
    <string name="klik_detail_report">Klik untuk detail</string>
    <string name="hasil_laporan_mandiri">Hasil Laporan Mandiri</string>
    <string name="buat_laporan_harian">Buat Laporan Harian</string>
    <string name="pertanyaan_1">Bagaimana kemampuan berbicara anda hari ini?</string>
    <string name="pertanyaan_2">Bagaimana kemampuan penglihatan anda hari ini?</string>
    <string name="pertanyaan_3">Bagaimana kondisi badan anda hari ini?</string>
    <string name="pernyataan_1">Kemampuan berbicara:</string>
    <string name="pernyataan_2">Kemampuan penglihatan:</string>
    <string name="pernyataan_3">Kondisi badan:</string>

    //Toast string assets
    <string name="berhasil_logout">Berhasil logout</string>
    <string name="terjadi_kesalahan">Terjadi kesalahan</string>
    <string name="nama_kosong">Nama tidak boleh kosong</string>
    <string name="email_kosong">Email tidak boleh kosong</string>
    <string name="password_kosong">Password tidak boleh kosong</string>
    <string name="password_kurang">Password harus lebih dari 6 huruf</string>
    <string name="login_gagal">Log in gagal, Email atau Password yang anda masukan salah.</string>
    <string name="login_berhasil">Login berhasil</string>
    <string name="registrasi_gagal">Registrasi gagal. Harap coba lagi.</string>
    <string name="registrasi_berhasil">Berhasil menyimpan akun dengan nama: </string>
    <string name="kontak_berhasil">Berhasil menambahkan kontak!</string>
    <string name="kontak_field_kurang">Semua kolom harus diisi</string>
    <string name="laporan_berhasil">Berhasil menambahkan laporan!</string>
    <string name="laporan_field_kurang">Semua pertanyaan harus dijawab</string>
    <string name="gagal_menyimpulkan">Gagal Menyimpulkan</string>
    <string name="jadwal_berhasil">Berhasil menambahkan jadwal!</string>
    <string name="jadwal_field_kurang">Semua field harus diisi</string>
    <string name="jadwal_update_berhasil">Berhasil mengubah jadwal!</string>
    <string name="jadwal_delete_berhasil">Obat %1$s berhasil dihapus</string>
    <string name="dialog_allert_title">Hapus %1$s</string>
    <string name="dialog_allert_message">Anda yakin akan menghapus %1$s ?</string>
    <string name="dialog_allert_ya">Ya</string>
    <string name="dialog_allert_tidak">Tidak</string>
    <string name="pesan_sms">EMERGENCY! TOLONG CEK SAYA\n-Dikirim dari fitur emergency StroCare-</string>
    <string name="izin_read_kontak">Izin read-contact belum diberikan</string>
    <string name="izin_sms">Izin SMS belum diberikan</string>
    <string name="sms_berhasil">SMS Terkirim!</string>

    //Report string-array assets
    <string name="baik">Baik</string>
    <string name="agak_buruk">Agak buruk</string>
    <string name="buruk">Buruk</string>
    <string name="sehat">SEHAT</string>
    <string name="kurang_sehat">KURANG SEHAT</string>
    <string name="tidak_sehat">TIDAK SEHAT</string>
    <string-array name="array_jawaban">
        <item>Pilih jawaban</item>
        <item>Baik</item>
        <item>Agak buruk</item>
        <item>Buruk</item>
    </string-array>
    <string-array name="array_kesimpulan">
        <item>SEHAT</item>
        <item>KURANG SEHAT</item>
        <item>TIDAK SEHAT</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>