<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/update_schedule_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_card_schedule"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/update_tambah_jadwal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/label_update_jadwal"
                    android:textColor="@color/accent_color"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/update_nama_obat_field_scheduler"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/nama_obat_hint"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/update_dosis_obat_field_scheduler"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/dosis_obat_hint"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/update_nama_dokter_field_scheduler"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/nama_dokter_hint"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignStart="@id/update_waktu_obat_field_scheduler"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="10dp"
                                android:layout_toStartOf="@+id/tv_time_schedule"
                                android:src="@drawable/ic_time_schedule" />

                            <EditText
                                android:id="@+id/update_waktu_obat_field_scheduler"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="15dp"
                                android:inputType="time"
                                android:hint="00:00"
                                android:textSize="28sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <android.widget.Button
                                android:id="@+id/button_update_waktu_obat"
                                android:layout_width="150dp"
                                android:layout_height="40dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="15dp"
                                android:background="@drawable/shape_button_general_border_only"
                                android:inputType="time"
                                android:text="@string/pilih_waktu"
                                android:textColor="@color/accent_color"
                                android:textSize="15sp" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_delete_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_delete" />

            <android.widget.Button
                android:id="@+id/button_update_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="80"
                android:background="@drawable/shape_button_general"
                android:elevation="4dp"
                android:text="@string/update_jadwal"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</layout>