<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/add_schedule_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_card_schedule"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:id="@+id/label_tambah_jadwal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/label_tambah_jadwal"
                    android:textColor="@color/accent_color"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/nama_obat_field_scheduler"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/nama_obat_hint"
                        android:textSize="20sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_medical"
                            android:layout_margin="10dp"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/dosis_obat_field_scheduler"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/dosis_obat_hint"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/nama_dokter_field_scheduler"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/nama_dokter_hint"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="end">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/waktu_obat_field_scheduler"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_toStartOf="@+id/tv_time_schedule"
                            android:src="@drawable/ic_time_schedule" />

                        <EditText
                            android:id="@+id/waktu_obat_field_scheduler"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:hint="@string/waktu_hint"
                            android:layout_marginEnd="15dp"
                            android:inputType="time"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>