<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/scrollview_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/add_report_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_card_schedule"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_tambah_laporan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/label_tambah_laporan"
                        android:textColor="@color/accent_color"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="top"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/pertanyaan_1"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinner_jawaban_report1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:layout_weight="3"
                            android:backgroundTint="@color/accent_color"
                            android:entries="@array/array_jawaban" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/accent_color"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="top"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/pertanyaan_2"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Spinner

                            android:id="@+id/spinner_jawaban_report2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:layout_weight="3"
                            android:backgroundTint="@color/accent_color"
                            android:entries="@array/array_jawaban" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/accent_color"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="top"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/pertanyaan_3"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinner_jawaban_report3"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:layout_weight="3"
                            android:backgroundTint="@color/accent_color"
                            android:entries="@array/array_jawaban" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/accent_color"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <android.widget.Button
                android:id="@+id/button_add_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buat_laporan_harian"
                android:textColor="@color/white"
                android:background="@drawable/shape_button_general"/>

        </LinearLayout>

    </ScrollView>

</layout>